--- a/styles/index.css
+++ b/styles/index.css
@@ -33,6 +33,7 @@ body {
   overflow-x: hidden;
   background-image: url("../assets/backgound.svg");
   background-repeat: no-repeat;
+  background-repeat: repeat-y;
   font-family: "rockridge";
 }
 a:hover {
@@ -390,7 +391,7 @@ a {
   /* opacity: 0.4; */
 }
 .section1-form-text {
-  font-size: 14px;
+  font-size: 13px;
   opacity: 0.6;
   margin-bottom: 0;
 }
@@ -512,6 +513,8 @@ a {
 }
 a.nav-link {
   color: #121927ac;
+  text-transform: uppercase;
+  font-size: 11px !important;
   /* margin-left: 30px; */
 }
 .about--text__hmod {
@@ -554,6 +557,7 @@ a.nav-link {
   background-color: #fff !important;
   border: 1px solid black !important;
   color: #000 !important;
+  font-weight: 100;
   border-radius: 0 !important;
   height: 40px;
   margin: 0 !important;
@@ -567,7 +571,7 @@ a.nav-link {
   /* margin-top: 20px; */
 }
 .form-check-label {
-  font-size: 16px;
+  font-size: 13px;
 }
 #contact-form {
   margin-top: 20px;
@@ -738,7 +742,8 @@ a.nav-link {
   margin-top: 20%;
 }
 .projects--title {
-  max-width: 65%;
+  /* max-width: 65%; */
+  width: auto;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -830,7 +835,7 @@ h2 {
   font-size: 24px;
 }
 .nav-link {
-  font-size: 14px;
+  font-size: 13px !important;
 }
 .cursor {
   cursor: pointer;
@@ -1101,23 +1106,61 @@ h2 {
     }
   }
 }
-
+.white__switcher.form-switch .form-check-input {
+  background-image: url("../assets/sunwhite.svg") !important;
+  border-radius: 0em !important;
+  width: 60px !important;
+  height: 30px;
+  background-size: 26px;
+  border: 1px solid black;
+  border-radius: 15px !important;
+  background-position-x:10%;
+}
+.white__switcher.form-switch .form-check-input:checked {
+  width: 26px;
+  border: 1px solid #ffffff !important;
+  background-image: url("../assets/moonwhite.svg") !important;
+  background-size: 26px;
+  background-position-x: 90%;
+  border-radius: 15px !important;
+}
 .form-switch .form-check-input {
   background-image: url("../assets/sun.svg") !important;
   border-radius: 0em !important;
   width: 60px !important;
   height: 30px;
-  background-size: 30%;
+  background-size: 26px;
   border: 1px solid black;
+  border-radius: 15px !important;
+  background-position-x:10%;
 }
 .form-switch .form-check-input:checked {
-  background-color: #121927;
-  border: 1px solid #32343982;
+  width: 26px;
+  border: 1px solid #010101 !important;
   background-image: url("../assets/moon.svg") !important;
-  background-size: 30%;
-  background-position-x: -5%;
+  background-size: 26px;
+  background-position-x: 90%;
+  border-radius: 15px !important;
 }
-
+.soc__icon{
+  font-weight: 100;
+  line-height: 17px;
+  font-size: 12px;
+  text-decoration: none;
+  text-align: right;
+  color: #FFFFFF;
+  opacity: 0.8;
+  margin-left: 5px;
+}
+.soc__icon:hover{
+  font-weight: 100;
+  line-height: 17px;
+  font-size: 12px;
+  text-decoration: none;
+  text-align: right;
+  color: #FFFFFF;
+  opacity: 1;
+}
 .form-select {
   font-size: 14px !important;
   margin-top: 1rem;
@@ -1376,9 +1419,15 @@ flickity-enabled {
 .flickity-page-dots {
   display: none;
 }
+.readmore{
+  max-width: 20% !important;
+  width: 20% !important;
+  height: 20px !important;
+}
 .footer-inside-white {
   border-top: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 60px;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 .dark-mode .footer-inside-black {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
@@ -1491,8 +1540,8 @@ flickity-enabled {
   margin-bottom: 0 !important;
 } */
 
-.white__switcher.form-check-input {
-  background-color: transparent !important;
+.white__switcher {
+  margin-top: -2px;
 }
 .video {
   width: 100vw;
@@ -1500,7 +1549,7 @@ flickity-enabled {
   object-fit: cover;
 }
 .carousle__inner {
-  margin-top: -11.5vh;
+  margin-top: -11.9vh;
   z-index: -1;
 }
 
@@ -1510,9 +1559,32 @@ flickity-enabled {
   justify-content: center;
 }
 .lang__drop_white {
-  all: unset !important;
+  margin: 0 !important;
+  width: auto !important;
+  background-color: transparent !important;
+  border: none !important;
   color: #fff !important;
   position: relative;
+  font-size: 13px !important;
+  margin-right: 5px;
+  background-image: url("../assets/dropdown.svg") !important;
+  background-size: 22% !important;
+}
+.lang__drop {
+  margin: 0 !important;
+  width: auto !important;
+  background-color: transparent !important;
+  border: none !important;
+  color: rgb(0, 0, 0) !important;
+  position: relative;
+  font-size: 13px !important;
+  margin-right: 5px;
+  background-image: url("../assets/dropdowndark.svg") !important;
+  background-size: 42% !important;
+  background-position-x: right;
+}
+.contact__platforms{
+  font-size: 13px !important;
 }
 .nav-styles-select::after {
   content: url("../assets/langArrowWhite.png");
@@ -1537,6 +1609,33 @@ flickity-enabled {
 .navbar-nav:nth-child(-n + 2) {
   color: white;
 }
-.navbar-nav li:last-child {
+/* .navbar-nav li:last-child {
   margin: 0 10px;
+} */
+.logo{
+  width: 150px;
+}
+.container__video {
+   position:relative; 
+}
+.container__video video {
+    position:relative;
+    z-index:0;
+}
+.overlay {
+  position:absolute;
+  top:40vh;
+  z-index:1;
+}
+.banner__header{
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 65px;
+  color: #FFFFFF;
+}
+.mt-60{
+  margin-top: 60px;
+}
+.form-control::placeholder{
+  color: rgba(0, 0, 0, 0.400) !important;
 }
