--- a/styles/index.css
+++ b/styles/index.css
@@ -192,10 +192,6 @@ a {
 
 /* Carousel */
 
-.container {
-  margin-top: 20px;
-}
-
 /* Carousel Styles */
 .carousel-indicators .active {
   background-color: #fff;
@@ -609,8 +605,8 @@ a.nav-link {
   margin-bottom: 10px;
 }
 .contact__section {
-  margin-top: 120px;
-  margin-bottom: 120px;
+  /* margin-top: 120px;
+  margin-bottom: 120px; */
 }
 .contact__info {
   height: auto;
@@ -841,7 +837,7 @@ h2 {
   cursor: pointer;
 }
 .mt-120 {
-  margin-top: 120px;
+  margin-top: 120px !important;
 }
 .mb-120 {
   margin-bottom: 120px;
@@ -1539,17 +1535,22 @@ flickity-enabled {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 } */
-
+.menu__item_mobile{
+  margin-left: 20px;
+}
+.nav__container{
+  margin-top: 16px;
+}
 .white__switcher {
   margin-top: -2px;
 }
 .video {
   width: 100vw;
-  height: 100vh;
+  height: 110vh;
   object-fit: cover;
 }
 .carousle__inner {
-  margin-top: -11.9vh;
+  margin-top: -15vh;
   z-index: -1;
 }
 
@@ -1634,9 +1635,6 @@ flickity-enabled {
   line-height: 65px;
   color: #ffffff;
 }
-.mt-60 {
-  margin-top: 60px;
-}
 .form-control::placeholder {
   color: rgba(0, 0, 0, 0.4) !important;
 }
@@ -1663,13 +1661,13 @@ flickity-enabled {
 .menu__btn {
   display: flex;
   align-items: center;
-  position: fixed;
-  top: 20px;
+  position: absolute;
+  top: 75px;
   right: 20px;
   width: 26px;
   height: 26px;
   cursor: pointer;
-  z-index: 1;
+  z-index: 99;
 }
 
 .menu__btn > span,
@@ -1682,6 +1680,19 @@ flickity-enabled {
   height: 2px;
 
   background-color: #fdfdfd;
+
+  transition-duration: 0.25s;
+}
+.menu__dark > span,
+.menu__dark > span::before,
+.menu__dark > span::after {
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: #000000;
 
   transition-duration: 0.25s;
 }
@@ -1700,7 +1711,7 @@ flickity-enabled {
   visibility: hidden;
   top: 0;
   left: 90%;
-
+  z-index: 9;
   width: 100%;
   height: 100%;
 
@@ -1744,6 +1755,8 @@ flickity-enabled {
   }
   .mobile_container {
     display: block !important;
+    margin-top: 0px;
+    padding-top: 0px;
   }
   .destkop__view {
     display: none;
@@ -1792,4 +1805,23 @@ flickity-enabled {
   font-size: 24px;
   line-height: 29px;
   color: #121927;
+}
+.social__mobile{
+  height: 69px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mobile_social_platgorms{
+  font-size: 15px !important;
+}
+.soc__icon__mobile{
+  font-weight: 100;
+  line-height: 17px;
+  font-size: 15px;
+  text-decoration: none;
+  text-align: right;
+  color: #ffffff;
+  opacity: 0.8;
+  margin-left: 14px;
 }
