--- a/styles/index.css
+++ b/styles/index.css
@@ -1546,7 +1546,7 @@ flickity-enabled {
 }
 .video {
   width: 100vw;
-  height: 110vh;
+  height: 109.3vh;
   object-fit: cover;
 }
 .carousle__inner {
@@ -1864,4 +1864,12 @@ flickity-enabled {
   .nav__container {
     margin-top: 0;
   }
+}
+.carousel-inner > .item {
+  position: relative;
+  display: none;
+  -webkit-transition: 1s ease-in-out left !important;
+  -moz-transition: 1s ease-in-out left !important;
+  -o-transition: 1s ease-in-out left !important;
+  transition: 1s ease-in-out left !important;
 }
