--- a/styles/index.css
+++ b/styles/index.css
@@ -1546,6 +1546,8 @@ flickity-enabled {
 }
 .nav__container {
   margin-top: 16px;
+  z-index: 9;
+  position: relative;
 }
 .white__switcher {
   margin-top: -2px;
@@ -1557,7 +1559,6 @@ flickity-enabled {
 }
 .carousle__inner {
   margin-top: -15vh;
-  z-index: -1;
 }
 
 .nav-style {
