--- a/styles/index.css
+++ b/styles/index.css
@@ -664,6 +664,7 @@ a.nav-link {
   text-decoration: none;
 }
 .cover {
+  min-height: 500px;
   height: 300px;
   background-image: url("../assets/gundisfoto.png");
   background-repeat: no-repeat;
@@ -823,6 +824,9 @@ a.nav-link {
 .mt-20 {
   padding-top: 20px;
 }
+.marginer-30 {
+  margin-top: 30px !important;
+}
 .mt-10 {
   padding-top: 10px;
 }
@@ -860,7 +864,7 @@ h2 {
   margin-top: 350px;
 }
 .special-margin-row {
-  margin-top: 200px !important;
+  margin-top: 120px !important;
 }
 
 /* USE OF IMPORTANT  */
@@ -1928,4 +1932,7 @@ flickity-enabled {
   white-space: nowrap;
 }
 .whitespacerow div {
+}
+.projects--1rem {
+  margin-top: 16px !important;
 }
