--- a/styles/index.css
+++ b/styles/index.css
@@ -696,6 +696,7 @@ a.nav-link {
   border-bottom: 1px solid black;
   max-width: 38%;
   margin-bottom: 10px;
+  margin-top: 60px !important;
   line-height: 2rem;
 }
 /* .project--see img {
@@ -766,13 +767,15 @@ a.nav-link {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 
   color: #121927;
 }
 
 .projects--texts__op {
   opacity: 0.6;
+  margin-bottom: 10px;
+  max-width: 50% !important;
 }
 .projects--legend__top {
   margin-top: 100px;
@@ -882,6 +885,7 @@ h2 {
 
 .projects--texts__create {
   margin: 0;
+  margin-bottom: 10px;
 }
 .projects--texts__date {
   margin-bottom: 60px;
@@ -1934,5 +1938,5 @@ flickity-enabled {
 .whitespacerow div {
 }
 .projects--1rem {
-  margin-top: 16px !important;
+  margin-bottom: 16px !important;
 }
