--- a/styles/index.css
+++ b/styles/index.css
@@ -666,11 +666,12 @@ a.nav-link {
 .cover {
   min-height: 500px;
   height: 300px;
-  background-image: url("../assets/gundisfoto.png");
+  background-image: url("../assets/teamfinal/about-final.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
   object-fit: cover;
+  filter: grayscale(100%);
 }
 .Calculator {
   height: 548px;
