--- a/styles/index.css
+++ b/styles/index.css
@@ -509,8 +509,9 @@ a {
   color: white;
   text-decoration: none;
 }
-a.nav-link {
-  color: #121927ac;
+.nav-item  a{
+  text-decoration: none;
+  color: #121927ac ;
   text-transform: uppercase;
   font-size: 11px !important;
   /* margin-left: 30px; */
@@ -2032,4 +2033,11 @@ flickity-enabled {
 }
 .blog_banner__img {
   width: 100%;
+}
+
+.nav-link a{
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 11px !important;
 }
