--- a/styles/index.css
+++ b/styles/index.css
@@ -2041,3 +2041,6 @@ flickity-enabled {
   text-transform: uppercase;
   font-size: 11px !important;
 }
+.modal{
+  --bs-modal-width: 90% !important;
+}
