--- a/styles/index.css
+++ b/styles/index.css
@@ -1915,7 +1915,7 @@ flickity-enabled {
 
 @media (max-width: 600px) {
   .dark-mode .form-select {
-    color: black !important;
+    color: white !important;
   }
 
   .dark-mode .menu__dark > span,
@@ -1926,7 +1926,6 @@ flickity-enabled {
 
     width: 100%;
     height: 2px;
-
     background-color: #fff;
 
     transition-duration: 0.25s;
@@ -2003,7 +2002,9 @@ flickity-enabled {
 .flex-helper a {
   text-decoration: none;
 }
-
+.dark-mode .flex-helper {
+  color: #fff;
+}
 .slider_logo {
   width: 59% !important;
   max-width: 58% !important;
