--- a/styles/index.css
+++ b/styles/index.css
@@ -1952,7 +1952,23 @@ flickity-enabled {
 }
 
 .overlay {
-  background-image: linear-gradient(to bottom right, #000000, #242424);
+  /* background-image: linear-gradient(to bottom right, #242424, #d2d2d2); */
+  opacity: 0.8;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  padding: 15% 32px;
+  line-height: 1.5;
+  text-align: center;
+}
+.overlayN {
+  /* background-image: linear-gradient(to bottom right, #636363, #242424); */
   opacity: 0.8;
   position: absolute;
   top: 0;
@@ -1973,7 +1989,7 @@ flickity-enabled {
 
 .innerContent {
   text-align: left;
-  margin-top: 10%;
+  margin-top: 30%;
 }
 .innerContent a {
   text-decoration: none;
@@ -2162,4 +2178,13 @@ flickity-enabled {
 }
 .ocpTest {
   margin-top: 13px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  text-align: justify !important;
 }
