--- a/components/openpage/openPage.module.scss
+++ b/components/openpage/openPage.module.scss
@@ -67,7 +67,7 @@
     }
   }
   right: 0;
-  background: url("../../assets/sep13/opener/night1.jpg");
+  // background: url("../../assets/sep13/opener/night1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   transition: all var(--speed) ease-in-out;
