--- a/styles/index.css
+++ b/styles/index.css
@@ -2211,11 +2211,13 @@ p {
   background-image: url("../assets/sep13/opener/night1.jpeg");
   background-size: cover;
   height: 108vh;
+  border: 4px solid #121927;
 }
 .apart__night {
   background-image: url("../assets/sep13/opener/day1.jpg");
   background-size: cover;
   height: 108vh;
+  border: 4px solid #121927;
 }
 .headers__for_start {
   position: absolute;
@@ -2231,4 +2233,17 @@ p {
 }
 .dark-mode .quote {
   filter: brightness(100);
+}
+.coming-soon {
+  border: 1px solid black;
+  padding: 1rem;
+  text-align: center;
+}
+.dark-mode .coming-soon {
+  border: 1px solid white;
+  padding: 1rem;
+  text-align: center;
+}
+.coming-soon-container {
+  padding: 0 !important;
 }
