--- a/styles/index.css
+++ b/styles/index.css
@@ -2207,17 +2207,22 @@ p {
   z-index: 99;
   top: -5%;
 }
+.overlay_choose .col {
+  flex: none !important;
+}
 .apart__day {
   background-image: url("../assets/sep13/opener/night1.jpeg");
   background-size: cover;
   height: 108vh;
   border: 4px solid #121927;
+  width: 50%;
 }
 .apart__night {
   background-image: url("../assets/sep13/opener/day1.jpg");
   background-size: cover;
   height: 108vh;
   border: 4px solid #121927;
+  width: 50px;
 }
 .headers__for_start {
   position: absolute;
@@ -2255,4 +2260,15 @@ p {
 }
 ul.navbar-nav li a {
   font-size: 13px !important;
+}
+.opener-container-n {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.hover-left:hover {
+  width: 75% !important;
 }
