--- a/styles/index.css
+++ b/styles/index.css
@@ -2214,8 +2214,9 @@ p {
   background-image: url("../assets/sep13/opener/night1.jpeg");
   background-size: cover;
   height: 108vh;
-  border: 4px solid #121927;
+  border-right: 4px solid #121927;
   width: 50%;
+  position: relative;
 }
 .apart__night {
   background-image: url("../assets/sep13/opener/day1.jpg");
@@ -2223,6 +2224,20 @@ p {
   height: 108vh;
   border: 4px solid #121927;
   width: 50px;
+  position: relative;
+}
+
+.apart__night:hover{
+  background-size: cover;
+  scale: 1.3;
+  position: relative;
+  z-index: 999;
+  transition: 0.5s;
+}
+.apart__day:hover{
+  background-size: cover;
+  scale: 1.3;
+  transition: 0.5s;
 }
 .headers__for_start {
   position: absolute;
@@ -2230,12 +2245,8 @@ p {
   color: white;
   font-weight: 900;
 }
-.daytext {
-  left: 10%;
-}
-.nighttext {
-  left: 60%;
-}
+
+
 .dark-mode .quote {
   filter: brightness(100);
 }
@@ -2269,6 +2280,7 @@ ul.navbar-nav li a {
   flex-direction: row;
 }
 
-.hover-left:hover {
-  width: 75% !important;
+
+.apart__day{
+  width: 50% !important;
 }
