--- a/styles/index.css
+++ b/styles/index.css
@@ -2223,21 +2223,23 @@ p {
   background-size: cover;
   height: 108vh;
   border: 4px solid #121927;
-  width: 50px;
+  width: 50%;
   position: relative;
 }
 
-.apart__night:hover{
+.apart__night:hover {
   background-size: cover;
-  scale: 1.3;
+  scale: 1.1;
   position: relative;
   z-index: 999;
-  transition: 0.5s;
+  transition: 0.6s;
+  background-position: center, right;
 }
-.apart__day:hover{
+.apart__day:hover {
   background-size: cover;
-  scale: 1.3;
-  transition: 0.5s;
+  scale: 1.1;
+  transition: 0.6s;
+  background-position: center, left;
 }
 .headers__for_start {
   position: absolute;
@@ -2245,7 +2247,6 @@ p {
   color: white;
   font-weight: 900;
 }
-
 
 .dark-mode .quote {
   filter: brightness(100);
@@ -2280,7 +2281,6 @@ ul.navbar-nav li a {
   flex-direction: row;
 }
 
-
-.apart__day{
+.apart__day {
   width: 50% !important;
 }
