--- a/styles/index.css
+++ b/styles/index.css
@@ -337,6 +337,9 @@ a {
 /* Mobile adjustments */
 
 @media (max-width: 768px) {
+  /* .overlay_choose {
+    display: none;
+  } */
   .bloc {
     text-align: center;
     -webkit-background-size: auto 200%;
