--- a/styles/index.css
+++ b/styles/index.css
@@ -2236,6 +2236,44 @@ flickity-enabled {
   transition: 0.6s;
   background-position: center, left;
 }
+.apart__day_mobile  {
+  background-image: url("../assets/sep13/opener/night1sep15.jpeg");
+  background-size: cover;
+  border-right: 4px solid #121927;
+  height: 53vh;
+  position: relative;
+  width: 100%;
+}
+.apart__night_mobile  {
+  background-image: url("../assets/sep13/opener/day1sep15.jpeg");
+  background-size: cover;
+  border: 4px solid #121927;
+  height: 53vh;
+  position: relative;
+  width: 100%;
+}
+
+.apart__night_mobile :hover {
+  background-size: cover;
+  scale: 1.1;
+  position: relative;
+  z-index: 999;
+  transition: 0.6s;
+  background-position: center, right;
+}
+.apart__day_mobile :hover {
+  background-size: cover;
+  scale: 1.1;
+  transition: 0.6s;
+  background-position: center, left;
+}
+.overlay_choose_mobile{
+  width: 100vw;
+  height: 108vh;
+  position: fixed;
+  z-index: 99;
+  top: -5%;
+}
 .headers__for_start {
   position: absolute;
   top: 50%;
