--- a/styles/index.css
+++ b/styles/index.css
@@ -2206,18 +2206,20 @@ flickity-enabled {
   flex: none !important;
 }
 .apart__day {
-  background-image: url("../assets/sep13/opener/night1sep15.jpeg");
+  background-image: url("../assets/sep13/opener/night1sep15.webp");
   background-size: cover;
   height: 108vh;
-  border-right: 4px solid #121927;
+  /* border-right: 2px solid #121927; */
+  border-left: 2px solid #121927;
   width: 50%;
   position: relative;
 }
 .apart__night {
-  background-image: url("../assets/sep13/opener/day1sep15.jpeg");
+  background-image: url("../assets/sep13/opener/day1sep15.webp");
   background-size: cover;
   height: 108vh;
-  border: 4px solid #121927;
+  border-right: 2px solid #121927;
+
   width: 50%;
   position: relative;
 }
@@ -2236,7 +2238,7 @@ flickity-enabled {
   transition: 0.6s;
   background-position: center, left;
 }
-.apart__day_mobile  {
+.apart__day_mobile {
   background-image: url("../assets/sep13/opener/night1sep15.jpeg");
   background-size: cover;
   border-right: 4px solid #121927;
@@ -2244,7 +2246,7 @@ flickity-enabled {
   position: relative;
   width: 100%;
 }
-.apart__night_mobile  {
+.apart__night_mobile {
   background-image: url("../assets/sep13/opener/day1sep15.jpeg");
   background-size: cover;
   border: 4px solid #121927;
@@ -2267,7 +2269,7 @@ flickity-enabled {
   transition: 0.6s;
   background-position: center, left;
 }
-.overlay_choose_mobile{
+.overlay_choose_mobile {
   width: 100vw;
   height: 108vh;
   position: fixed;
