--- a/styles/index.css
+++ b/styles/index.css
@@ -1723,10 +1723,12 @@ flickity-enabled {
 #menu__toggle:checked ~ .menu__btn > span::before {
   top: 0;
   transform: rotate(0);
+  background-color: rgb(0, 0, 0);
 }
 #menu__toggle:checked ~ .menu__btn > span::after {
   top: 0;
   transform: rotate(90deg);
+  background-color: rgb(0, 0, 0);
 }
 #menu__toggle:checked ~ .menu__box {
   visibility: visible;
@@ -1758,7 +1760,9 @@ flickity-enabled {
 
   transition-duration: 0.25s;
 }
-
+.menu__box li {
+  width: 50%;
+}
 .menu__dark > span,
 .menu__dark > span::before,
 .menu__dark > span::after {
@@ -1790,18 +1794,27 @@ flickity-enabled {
   z-index: 9;
   width: 100%;
   height: 100%;
-
   margin: 0;
   padding: 80px 0;
-
   list-style: none;
-
   background-color: #eceff1;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+  transition-duration: 0.25s;
+}
+.menu__box li a{
+  display: block;
+  padding: 12px 24px;
+
+  color: #333;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+
+  text-decoration: none;
 
   transition-duration: 0.25s;
 }
-
 .menu__item {
   display: block;
   padding: 12px 24px;
@@ -2205,6 +2218,7 @@ flickity-enabled {
   position: fixed;
   z-index: 99;
   top: -5%;
+  background-color: #000;
 }
 .overlay_choose .col {
   flex: none !important;
