double footer on about fix + opener left:0 fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -2218,6 +2218,7 @@ flickity-enabled {
   position: fixed;
   z-index: 99;
   top: -5%;
+  left: 0;
   background-color: #000;
 }
 .overlay_choose .col {
