--- a/styles/index.css
+++ b/styles/index.css
@@ -669,14 +669,14 @@ a {
   text-decoration: none;
 }
 .cover {
-  min-height: 500px;
+  /* min-height: 500px;
   height: 300px;
   background-image: url("../assets/teamfinal/about-final.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
   object-fit: cover;
-  filter: grayscale(100%);
+  filter: grayscale(100%); */
 }
 .Calculator {
   height: 548px;
@@ -2044,6 +2044,9 @@ flickity-enabled {
 .dark-mode .flex-helper {
   color: #fff;
 }
+.flex-helper image {
+  margin-left: 5px !important;
+}
 .slider_logo {
   width: 59% !important;
   max-width: 58% !important;
@@ -2353,4 +2356,9 @@ select.form-select.lang__drop_white option {
   background-color: transparent !important;
   color: white !important;
   border: 1px solid white !important;
+}
+.anim-arrow {
+  width: 50px;
+  height: 100px;
+  margin-left: 50%;
 }
