--- a/styles/index.css
+++ b/styles/index.css
@@ -7,17 +7,12 @@
     0 0 0.8px black;
 }
 
-.hero {
-  height: auto;
-}
+
 
 .bg-image {
   max-height: 800px;
 }
-html,
-body {
-  height: 100%;
-}
+
 @font-face {
   font-family: "rockridge";
   src: url("Fonts/rockridge-webfont.woff2");
@@ -31,6 +26,8 @@ body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   background-size: cover;
   background-position: center;
   /* background-image: url("../assets/backgound.svg"); */
@@ -611,6 +608,7 @@ a {
   height: 100px;
   margin-bottom: 10px;
 }
+
 .contact__section {
   /* margin-top: 120px;
   margin-bottom: 120px; */
@@ -966,7 +964,15 @@ h2 {
 .goback {
   display: block;
 }
+.projects_page{
+  height: auto;
+  overflow: hidden;
+}
 @media screen and (max-width: 568px) {
+  .projects_page{
+    overflow-y: scroll;
+    height: 100vh;
+  }
   .special-margin-class {
     margin-top: 120px;
   }
