--- a/styles/index.css
+++ b/styles/index.css
@@ -2368,3 +2368,7 @@ select.form-select.lang__drop_white option {
   height: 100px;
   margin-left: 50%;
 }
+.test_svg{
+  position: absolute;
+  z-index: 1;
+}
