--- a/styles/index.css
+++ b/styles/index.css
@@ -2383,3 +2383,8 @@ select.form-select.lang__drop_white option {
     text-align: center;
     font-size: 1rem;
 }
+code {
+    color: #333 !important;
+    font-size: 14px !important;
+    font-family: 'rockridge' !important;
+}
