--- a/styles/index.css
+++ b/styles/index.css
@@ -2449,3 +2449,9 @@ code {
 .text-white {
     color: red;
 }
+.dark-mode .code-overlay code {
+    color: white !important;
+}
+.dark-mode .maket-spin {
+    filter: brightness(0) invert(1);
+}
