--- a/styles/index.css
+++ b/styles/index.css
@@ -555,7 +555,7 @@ a {
     background-color: #fff !important;
     border: 1px solid black !important;
     color: #000 !important;
-    font-weight: 100;
+    font-weight: 400 !important;
     border-radius: 0 !important;
     height: 40px;
     margin: 0 !important;
