--- a/styles/index.css
+++ b/styles/index.css
@@ -2455,3 +2455,33 @@ code {
 .dark-mode .maket-spin {
     filter: brightness(0) invert(1);
 }
+.thanks-row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.thanks-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.thanks-logo {
+    filter: brightness(0) invert(1);
+    /* display: block; */
+}
+.thanks-t1 {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+}
+.thanks-t2 {
+    margin-bottom: 30px;
+    color: #fff;
+    font-size: 16px;
+    align-items: center;
+    text-align: center;
+}
